@@ -16,8 +16,11 @@
 
 import optparse
 import os
+import shutil
 import sys
+import tempfile
 
+from ubuntutools.config import UDTConfig
 from ubuntutools.builder import getBuilder
 from ubuntutools.logger import Logger
 from ubuntutools.sponsor_patch.main import main
@@ -27,27 +30,22 @@ usage = "%s [options] <bug number>" % (script_name)
 epilog = "See %s(1) for more info." % (script_name)
 parser = optparse.OptionParser(usage=usage, epilog=epilog)
 
-if "SPONSOR_PATCH_WORKDIR" in os.environ:
-    default_workdir = os.path.abspath(os.environ["SPONSOR_PATCH_WORKDIR"])
-else:
-    default_workdir = os.getcwd()
-
-if "SPONSOR_PATCH_BUILDER" in os.environ:
-    default_builder = os.environ["SPONSOR_PATCH_BUILDER"]
-else:
-    default_builder = None
-
 parser.add_option("-b", "--build", dest="build",
                   help="Build the package with the specified builder.",
                   action="store_true", default=False)
-parser.add_option("-B", "--builder", dest="builder",
-                  help="Specify the package builder (default pbuilder)",
-                  default=default_builder)
+parser.add_option("-B", "--builder", dest="builder", default=None,
+                  help="Specify the package builder (default pbuilder)")
 parser.add_option("-e", "--edit",
                   help="launch sub-shell to allow editing of the patch",
                   dest="edit", action="store_true", default=False)
 parser.add_option("-k", "--key", dest="keyid", default=None,
                   help="Specify the key ID to be used for signing.")
+parser.add_option("-l", "--lpinstance", dest="lpinstance", default=None,
+                  help="Launchpad instance to connect to (default: production)",
+                  metavar="INSTANCE")
+parser.add_option("--no-conf", dest="no_conf", default=False,
+                  help="Don't read config files or environment variables.",
+                  action="store_true")
 parser.add_option("-s", "--sponsor", help="sponsoring; equals -b -u ubuntu",
                   dest="sponsoring", action="store_true", default=False)
 parser.add_option("-u", "--upload", dest="upload", default=None,
@@ -57,8 +55,7 @@ parser.add_option("-U", "--update", dest="update", default=False,
                   help="Update the build environment before building.")
 parser.add_option("-v", "--verbose", help="print more information",
                   dest="verbose", action="store_true", default=False)
-parser.add_option("-w", "--workdir", dest="workdir",
-                  default=default_workdir,
+parser.add_option("-w", "--workdir", dest="workdir", default=None,
                   help="Specify a working directory.")
 
 (options, args) = parser.parse_args()
@@ -78,6 +75,16 @@ else:
     Logger.error("Invalid bug number specified: %s" % (bug_number))
     sys.exit(1)
 
+config = UDTConfig(options.no_conf)
+if options.builder is None:
+    options.builder = config.get_value("BUILDER")
+if options.lpinstance is None:
+    options.lpinstance = config.get_value("LPINSTANCE")
+if not options.update:
+    options.update = config.get_value("UPDATE_BUILDER", boolean=True)
+if options.workdir is None:
+    options.workdir = config.get_value("WORKDIR")
+
 builder = getBuilder(options.builder)
 if not builder:
     sys.exit(1)
@@ -86,5 +93,20 @@ if options.sponsoring:
     options.build = True
     options.upload = "ubuntu"
 
-main(bug_number, options.update, options.build, options.edit, options.keyid,
-     options.upload, options.workdir, builder, options.verbose)
+if not options.upload and not options.workdir:
+    Logger.error("Please specify either a working directory or an upload "
+                 "target!")
+    sys.exit(1)
+
+if options.workdir is None:
+    workdir = tempfile.mkdtemp(prefix=script_name+"-")
+else:
+    workdir = options.workdir
+
+try:
+    main(bug_number, options.build, builder, options.edit, options.keyid,
+         options.lpinstance, options.update, options.upload, workdir,
+         options.verbose)
+finally:
+    if options.workdir is None:
+        shutil.rmtree(workdir)
